traefik/external/nextcloud/service.yaml
---
apiVersion: v1  
kind: Service  
metadata:  
  name: nextcloud  
spec:  
  ports:  
    - protocol: TCP  
      port: 80  
      targetPort: 8888
