traefik/external/nextcloud/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.chriggle.com`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: chriggle-com-tls
